[ddwrt] replace trim().isEmpty() with isBlank()
code review PR #20505

Co-authored-by: lsiepel <leosiepel@gmail.com>
Signed-off-by: Lee Ballard <ballle98@gmail.com>